fix logo for firefox

--- a/overlay.html
+++ b/overlay.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <script>
@@ -43,7 +44,8 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        padding-right: 1.4em;
+        padding-top: 0.3vw;
+        padding-right: 1.8vw;
         padding-left: 5vw;
         max-height: calc(var(--hud-row-height) * 2);
       }
@@ -160,8 +162,7 @@
     <footer>
       <article id="left">
         <svg
-          width="auto"
-          height="80%"
+          width="5vw"
           viewBox="0 0 31.758356 31.790842"
           version="1.1"
           id="svg5"
