update files for 2025

--- a/overlay.html
+++ b/overlay.html
@@ -388,7 +388,7 @@
         "Visit www.AKJ.org for recordings, literature, and more",
         "Subscribe to the AKJ.Org YouTube channel: https://www.youtube.com/akjdotorg",
         "Follow AKJ on Facebook: https://www.facebook.com/AkhandKeertaneeJathaa",
-        "Follow @AKJdotOrg on Instagram and Twitter",
+        "Follow @AKJdotOrg on Instagram",
       ];
       bannerItems.map((item) => {
         var el = document.createElement("div");
