--- a/overlay.html
+++ b/overlay.html
@@ -56,6 +56,8 @@
       #topbar {
         background: var(--primary-banner-color);
         color: var(--primary);
+        position: relative;
+        top: 1px;
       }
       #banner {
         background: var(--secondary-banner-color);
